Add support for Paper 1.20.5